changes to compare debt and avoid repit debts